<resources>
    <string name="app_name">inTouch</string>
    <string name="action_settings">Settings</string>

    <!--Firebase Keyword-->

    <string name="firebase_database_news">news</string>
    <string name="firebase_storage_newsImages">newsImages</string>

    <!--SettingActivity Strings-->

    <string name="news_category_international">International</string>
    <string name="news_category_science">Science</string>
    <string name="news_category_business">Business</string>
    <string name="news_category_politics">Politics</string>
    <string name="news_category_sports">Sports</string>
    <string name="news_category_technology">Technology</string>
    
    <string name="show_image">Show Image            </string>
    <string name="categories">Categories</string>

    <!--SharedPrefrence Keys-->
    <string name="key_get_news_category">getNewsCategory</string>
    <string name="key_news_category_international">international</string>
    <string name="key_news_category_allNews">all_News</string>
    <string name="key_news_category_science">science</string>
    <string name="key_news_category_sports">sports</string>
    <string name="key_news_category_business">business</string>
    <string name="key_news_category_politics">politics</string>
    <string name="key_news_category_technology">technology</string>

    <string name="key_show_news_image">show_image_news</string>



    <!--Tost messages-->
    <string name="toast_message_network_not_available">Internet connection not available.</string>
    <string name="toast_message_show_image">Show Image</string>
    <string name="toast_message_dont_show_image">Do not show image</string>
    <string name="toast_message_error_with_saving_news">Error with saving news</string>
    <string name="toast_message_feeds_updated">Feeds Updated</string>
    <string name="toast_message_no_data_available">No data available</string>

    <!--Content Description-->
    <string name="description_news_image">Image related to the news</string>
    <string name="description_category_allNews">Image for All News category</string>
    <string name="description_category_international">Image for International category</string>
    <string name="description_category_business">Image for Business category</string>
    <string name="description_category_sports">Image for Sports category</string>
    <string name="description_category_politics">Image for Politics category</string>
    <string name="description_category_science">Image for Science category</string>
    <string name="description_category_technology">Image for Technology category</string>

    <string name="description_setting_image">Image for Setting</string>
    <string name="description_refresh_image">Image for Refresh</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">inTouch.example.com</string>
    <string name="content_authority">com.example.pratik.intouch_v_01</string>


</resources>
